extensions/salesforce-to-canvas-integration/salesforce/force-app/main/default/objects/Contact/fields/Canvas_Patient_ID__c.field-meta.xml
<CustomField>
    <fullName>Canvas_Patient_ID__c</fullName>
    <label>Canvas Patient ID</label>
    <type>Text</type>
    <length>64</length>
    <inlineHelpText>Reverse link to the Canvas patient. The Canvas plugin writes the patient identifier here after a successful Create patient resolution. Do not edit by hand.</inlineHelpText>
</CustomField>