extensions/salesforce-to-canvas-integration/salesforce/force-app/main/default/objects/Contact/fields/Canvas_Sync_Last_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Canvas_Sync_Last_Attempt__c</fullName>
    <label>Canvas Sync Last Attempt</label>
    <type>DateTime</type>
    <inlineHelpText>When the emitter last attempted to deliver a sync for this Contact.</inlineHelpText>
</CustomField>