extensions/salesforce-to-canvas-integration/salesforce/force-app/main/default/objects/Contact/fields/Canvas_Sync_Last_Error__c.field-meta.xml
<CustomField>
    <fullName>Canvas_Sync_Last_Error__c</fullName>
    <label>Canvas Sync Last Error</label>
    <type>LongTextArea</type>
    <length>2000</length>
    <inlineHelpText>The HTTP status and response body or exception message from the last failed or retrying sync attempt. Empty after a delivered attempt.</inlineHelpText>
</CustomField>