extensions/salesforce-to-canvas-integration/salesforce/force-app/main/default/objects/Contact/fields/Canvas_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Canvas_Sync_Status__c</fullName>
    <label>Canvas Sync Status</label>
    <type>Picklist</type>
    <inlineHelpText>The delivery outcome of the last sync attempt, written by the emitter. Delivered means Canvas accepted it. Retrying means a transient failure that will be retried. Failed means it was given up on, see Canvas Sync Last Error.</inlineHelpText>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Retrying</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>